fix: last touches (I believe) were applied on new envSync rules, renaming applied