@@ -5,25 +5,25 @@ import org.rebecalang.compiler.utils.Pair;
 import org.rebecalang.modeltransformer.ril.corerebeca.rilinstruction.InstructionBean;
 import org.rebecalang.modeltransformer.ril.corerebeca.rilinstruction.JumpIfNotInstructionBean;
 import org.rebecalang.modeltransformer.ril.hybrid.rilinstruction.StartUnbreakableConditionInstructionBean;
-import org.rebecalang.transparentactormodelchecker.realtimerebeca.statementlevelsosrules.HybridRebecaJumpSOSRule;
+import org.rebecalang.transparentactormodelchecker.realtimerebeca.statementlevelsosrules.RealTimeRebecaJumpSOSRule;
 import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.state.Environment;
-import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.state.HybridRebecaActorState;
-import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.transition.HybridRebecaDeterministicTransition;
-import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.transition.HybridRebecaNondeterministicTransition;
+import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.state.RealTimeRebecaActorState;
+import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.transition.RealTimeRebecaDeterministicTransition;
+import org.rebecalang.transparentactormodelchecker.realtimerebeca.transitionsystem.transition.RealTimeRebecaNondeterministicTransition;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class HybridRebecaJumpTest {
 
-    HybridRebecaJumpSOSRule hybridRebecaJumpSOSRule = new HybridRebecaJumpSOSRule();
-    HybridRebecaActorState hybridRebecaActorState = new HybridRebecaActorState("actor1");
+    RealTimeRebecaJumpSOSRule realTimeRebecaJumpSOSRule = new RealTimeRebecaJumpSOSRule();
+    RealTimeRebecaActorState realTimeRebecaActorState = new RealTimeRebecaActorState("actor1");
     Environment environment = new Environment();
 
     @Test
     public void TrueConditionGoesToIf() {
-        hybridRebecaActorState.setEnvironment(environment);
-        hybridRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", 1));
+        realTimeRebecaActorState.setEnvironment(environment);
+        realTimeRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", 1));
 
         Pair<Number, Number> left = new Pair<>(1, 3);
         Float right = (float)4;
@@ -33,12 +33,12 @@ public class HybridRebecaJumpTest {
         JumpIfNotInstructionBean jumpIfNotInstructionBean =
                 new JumpIfNotInstructionBean(startUnbreakableConditionInstructionBean, "methodName", 5);
 
-        Pair<HybridRebecaActorState, InstructionBean> source = new Pair<>();
-        source.setFirst(hybridRebecaActorState);
+        Pair<RealTimeRebecaActorState, InstructionBean> source = new Pair<>();
+        source.setFirst(realTimeRebecaActorState);
         source.setSecond(jumpIfNotInstructionBean);
 
-        HybridRebecaDeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>> result =
-                (HybridRebecaDeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>>) hybridRebecaJumpSOSRule.applyRule(source);
+        RealTimeRebecaDeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>> result =
+                (RealTimeRebecaDeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>>) realTimeRebecaJumpSOSRule.applyRule(source);
 
         Pair<String, Object> pcVal = (Pair<String, Object>) result.getDestination().getFirst().getVariableValue("$PC$");
         assertEquals(jumpIfNotInstructionBean.getLineNumber(), (Number)pcVal.getSecond());
@@ -46,9 +46,9 @@ public class HybridRebecaJumpTest {
 
     @Test
     public void TrueConditionGoesToElse() {
-        hybridRebecaActorState.setEnvironment(environment);
+        realTimeRebecaActorState.setEnvironment(environment);
         int pcInitVal = 1;
-        hybridRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", pcInitVal));
+        realTimeRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", pcInitVal));
 
         Pair<Number, Number> left = new Pair<>(1, 3);
         Float right = (float)0;
@@ -58,12 +58,12 @@ public class HybridRebecaJumpTest {
         JumpIfNotInstructionBean jumpIfNotInstructionBean =
                 new JumpIfNotInstructionBean(startUnbreakableConditionInstructionBean, "methodName", 5);
 
-        Pair<HybridRebecaActorState, InstructionBean> source = new Pair<>();
-        source.setFirst(hybridRebecaActorState);
+        Pair<RealTimeRebecaActorState, InstructionBean> source = new Pair<>();
+        source.setFirst(realTimeRebecaActorState);
         source.setSecond(jumpIfNotInstructionBean);
 
-        HybridRebecaDeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>> result =
-                (HybridRebecaDeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>>) hybridRebecaJumpSOSRule.applyRule(source);
+        RealTimeRebecaDeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>> result =
+                (RealTimeRebecaDeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>>) realTimeRebecaJumpSOSRule.applyRule(source);
 
         Pair<String, Object> pcVal = (Pair<String, Object>) result.getDestination().getFirst().getVariableValue("$PC$");
         assertEquals(pcInitVal + 1, (Number)pcVal.getSecond());
@@ -71,9 +71,9 @@ public class HybridRebecaJumpTest {
 
     @Test
     public void TrueConditionGoesToBoth() {
-        hybridRebecaActorState.setEnvironment(environment);
+        realTimeRebecaActorState.setEnvironment(environment);
         int pcInitVal = 1;
-        hybridRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", pcInitVal));
+        realTimeRebecaActorState.addVariableToScope("$PC$", new Pair<>("$PC$", pcInitVal));
 
         Pair<Number, Number> left = new Pair<>(1, 3);
         Float right = (float)2;
@@ -83,16 +83,16 @@ public class HybridRebecaJumpTest {
         JumpIfNotInstructionBean jumpIfNotInstructionBean =
                 new JumpIfNotInstructionBean(startUnbreakableConditionInstructionBean, "methodName", 5);
 
-        Pair<HybridRebecaActorState, InstructionBean> source = new Pair<>();
-        source.setFirst(hybridRebecaActorState);
+        Pair<RealTimeRebecaActorState, InstructionBean> source = new Pair<>();
+        source.setFirst(realTimeRebecaActorState);
         source.setSecond(jumpIfNotInstructionBean);
 
-        HybridRebecaNondeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>> result =
-                (HybridRebecaNondeterministicTransition<Pair<HybridRebecaActorState, InstructionBean>>) hybridRebecaJumpSOSRule.applyRule(source);
+        RealTimeRebecaNondeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>> result =
+                (RealTimeRebecaNondeterministicTransition<Pair<RealTimeRebecaActorState, InstructionBean>>) realTimeRebecaJumpSOSRule.applyRule(source);
 
         assertTrue(result.getDestinations().size() == 2);
-        HybridRebecaActorState ifDestination = result.getDestinations().get(0).getSecond().getFirst();
-        HybridRebecaActorState elseDestination = result.getDestinations().get(1).getSecond().getFirst();
+        RealTimeRebecaActorState ifDestination = result.getDestinations().get(0).getSecond().getFirst();
+        RealTimeRebecaActorState elseDestination = result.getDestinations().get(1).getSecond().getFirst();
 
         Pair<String, Object> elsePC = (Pair<String, Object>) elseDestination.getVariableValue("$PC$");
         assertEquals(pcInitVal + 1, (Number)elsePC.getSecond());
